# hackathon-starter

./: .env  .env.example  README.md  compose.yaml
apisix/: config.yaml
backend/: pyproject.toml
backend/app/: __init__.py  config.py
backend/app/dependencies/: authorization.py
backend/app/lib/: constants.py  rate_limit.py
backend/app/lib/oauth2/: token_validator.py
backend/app/oauth2/: token_validator.py
backend/migrations/: env.py
client/: .env  .env.example  components.json  middleware.ts  next.config.mjs  package-lock.json  package.json
client/app/: layout.tsx  page.tsx  providers.tsx
client/app/[locale]/: layout.tsx  page.tsx  providers.tsx
client/app/[locale]/(auth)/: layout.tsx
client/app/[locale]/dashboard/: layout.tsx
client/app/[locale]/login/: login-form.tsx  page.tsx
client/app/[locale]/recovery/: page.tsx
client/app/[locale]/registration/: page.tsx
client/app/[locale]/settings/: layout.tsx  page.tsx
client/app/[locale]/verification/: page.tsx  verification-form.tsx
client/app/api/.ory/: [...path].ts
client/app/login/: login-form.tsx  page.tsx
client/app/logout/: page.tsx
client/app/recovery/: page.tsx  recovery-form.tsx
client/app/registration/: page.tsx  register-form.tsx
client/app/verification/: page.tsx  verification-form.tsx
client/components/: icons.tsx  locale-switcher.tsx
client/components/auth/: flow.tsx  helpers.ts  logout-link.tsx  messages.tsx  node-anchor.tsx  node-image.tsx  node-input-button.tsx  node-input-checkbox.tsx  node-input-default.tsx  node-input-submit.tsx  node-input.tsx  node-text.tsx  node.tsx
client/components/dashboard/: search-bar.tsx  user-nav.tsx
client/components/ory/: user-auth-card.tsx  user-consent-card.tsx  user-error-card.tsx  user-logout-card.tsx  user-settings-card.tsx
client/components/ory/helpers/: common.tsx  error-messages.tsx  filter-flow-nodes.tsx  node-messages.tsx  node-script.tsx  node.tsx  types.ts  user-auth-form.tsx  utils.ts
client/components/settings/: logout-dialog.tsx  settings-header.tsx  sidebar-nav.tsx
client/components/ui/: pagination.tsx  toast.tsx  use-toast.ts
client/lib/: constants.ts  env.ts  errors.tsx  hydra.ts  i18n.ts  keycloak.ts  kratos.ts  navigation.ts  oidc.ts  ory.ts  queryClient.ts
client/lib/hooks/: use-session.ts  useCurrentSession.ts  useCurrentUser.ts  useLogout.ts  useRevokeOtherSessions.ts  useRevokeSession.ts  useSessions.ts
client/messages/: de.json  en.json
client/styles/: globals.css
client/utils/: avatar.ts  userAgent.ts
hydra/: hydra.yml
keycloak/: realm.json
keycloak-custom/: .env.example  README.md  pom.xml
keycloak-custom/container/: pom.xml
keycloak-custom/docker-compose/: pom.xml
keycloak-custom/server/: run-keycloak-setup.sh  run-keycloak.sh
kratos/: identity.schema.json  kratos.yml
kratos/data-mappers/: oidc.google.jsonnet
kratos/web-hooks/: create_stripe_customer_payload.jsonnet
server/: .env.example  .gitignore  pyproject.toml
server/app/: __init__.py  config.py
server/app/dependencies/: authorization.py  customers.py
server/app/lib/: kratos.py  stripe.py
server/app/routes/: web_hooks.py
server/app/schemas/: authentication.py  customers.py
server/app/services/: customers.py
(+49 files in other folders)
